# hypractive

./: CMakeLists.txt  DotPassElement.cpp  DotPassElement.hpp  Makefile  README.md  dotDeco.cpp  dotDeco.hpp  hyprpm.toml  main.cpp  meson.build
